// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCategoryForm: Component should render correctly 1`] = `
Array [
  <div
    className="sc-AxjAm bPMEtn"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="name"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Name
      </label>
      <input
        id="name"
        name="name"
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="name"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <div
          className="sc-AxirZ wBsWx"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>,
  <label
    style={
      Object {
        "border": "none",
        "borderTop": "2px solid #2F2F36",
        "color": "#71737e",
        "display": "block",
        "fontSize": "14px",
        "outline": "none",
        "paddingTop": "8px",
        "width": "100%",
      }
    }
  >
    Applicable in
  </label>,
  <div
    style={
      Object {
        "border": "none",
        "borderTop": "1px solid #2F2F36",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "borderBottom": "none",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row-reverse",
          "height": 48,
          "justifyContent": "flex-end",
        }
      }
    >
      <input
        aria-hidden={true}
        checked={false}
        id="content"
        name="type"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        type="checkbox"
        value="content"
      />
      <span
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        <label
          className="sc-fzoLsD enjVMW"
          htmlFor="content"
        >
          Content
        </label>
      </span>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "fontSize": 0,
          }
        }
      >
        <label
          htmlFor="content"
          style={
            Object {
              "cursor": "pointer",
              "marginRight": 10,
            }
          }
        >
          <svg
            style={
              Object {
                "height": "30px",
                "stroke": "#FFF",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M7.5 7.5h15v15h-15z"
              fill="none"
            />
          </svg>
        </label>
      </div>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "borderBottom": "none",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row-reverse",
          "height": 48,
          "justifyContent": "flex-end",
        }
      }
    >
      <input
        aria-hidden={true}
        checked={false}
        id="dataset"
        name="type"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        type="checkbox"
        value="dataset"
      />
      <span
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        <label
          htmlFor="dataset"
        >
          Dataset
        </label>
      </span>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "fontSize": 0,
          }
        }
      >
        <label
          htmlFor="dataset"
          style={
            Object {
              "cursor": "pointer",
              "marginRight": 10,
            }
          }
        >
          <svg
            style={
              Object {
                "height": "30px",
                "stroke": "#FFF",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M7.5 7.5h15v15h-15z"
              fill="none"
            />
          </svg>
        </label>
      </div>
    </div>
  </div>,
  <div
    className="sc-fzoiQi cCgTZV"
  >
    <div
      className="sc-fzqARJ cFaRpH"
    />
    2 Tags
    <div
      className="sc-fzqARJ cFaRpH"
    >
      <div
        className="sc-fzoXzr kozlLJ"
      >
        <div
          className="sc-fznxKY oVAET"
        >
          <button
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": 40,
                "margin": "0",
                "minHeight": 40,
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": 40,
              }
            }
            type="button"
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": 40,
                  "minHeight": 40,
                  "shapeRendering": "crispEdges",
                  "width": 40,
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-AxgMl WJDfg"
  >
    <div
      className="sc-AxhCb iUfLEo"
    >
      <div
        className="sc-AxhUy jrfdSh"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": 0,
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <input
            id="tags.0"
            name="tags.0"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontFamily": "inherit",
                "fontSize": "18px",
                "fontWeight": "inherit",
                "letterSpacing": "normal",
                "lineHeight": "24px",
                "maxWidth": "100%",
                "minWidth": 60,
                "outline": "none",
                "padding": 0,
              }
            }
            type="text"
            value="value"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <svg
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "fill": "#FFF",
              "height": 35,
              "marginLeft": 5,
              "minWidth": 35,
              "width": 35,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-AxhCb iUfLEo"
    >
      <div
        className="sc-AxhUy jrfdSh"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": 0,
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <input
            id="tags.1"
            name="tags.1"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontFamily": "inherit",
                "fontSize": "18px",
                "fontWeight": "inherit",
                "letterSpacing": "normal",
                "lineHeight": "24px",
                "maxWidth": "100%",
                "minWidth": 60,
                "outline": "none",
                "padding": 0,
              }
            }
            type="text"
            value="value"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <svg
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "fill": "#FFF",
              "height": 35,
              "marginLeft": 5,
              "minWidth": 35,
              "width": 35,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>,
  <div
    className="sc-AxmLO dpNtS"
    onClick={[Function]}
  >
    Tap or click to add new Tag
  </div>,
  <div
    className="sc-fzozJi eLMJeI"
  >
    <div
      className="sc-fzplWN dXUwnt"
    >
      <div>
        <input
          id="isAvailable"
          onChange={[Function]}
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
            }
          }
          type="checkbox"
        />
        <label
          htmlFor="isAvailable"
        >
          <div
            style={
              Object {
                "background": "#2F2F36",
                "borderRadius": 20,
                "boxSizing": "border-box",
                "cursor": "pointer",
                "height": 24,
                "padding": 2,
                "transition": "background 200ms ease-in-out",
                "width": 44,
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#FFF",
                  "borderRadius": "50%",
                  "height": 20,
                  "transform": "translateX(0)",
                  "transition": "transform 200ms ease-in-out",
                  "width": 20,
                }
              }
            />
          </div>
        </label>
      </div>
      <div
        className="sc-fznKkj hDJiXR"
      >
        <label
          className="sc-fznyAO ftBpOP"
          htmlFor="isAvailable"
        >
          Make it Available
        </label>
        <span
          className="sc-fzqBZW ercQYo"
        >
          This Tag Category is currently unavailable for Editors
        </span>
      </div>
    </div>
    <div
      className="sc-fzplWN dXUwnt"
    >
      <div>
        <input
          id="isSingleSelect"
          onChange={[Function]}
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
            }
          }
          type="checkbox"
        />
        <label
          htmlFor="isSingleSelect"
        >
          <div
            style={
              Object {
                "background": "#2F2F36",
                "borderRadius": 20,
                "boxSizing": "border-box",
                "cursor": "pointer",
                "height": 24,
                "padding": 2,
                "transition": "background 200ms ease-in-out",
                "width": 44,
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#FFF",
                  "borderRadius": "50%",
                  "height": 20,
                  "transform": "translateX(0)",
                  "transition": "transform 200ms ease-in-out",
                  "width": 20,
                }
              }
            />
          </div>
        </label>
      </div>
      <div
        className="sc-fznKkj hDJiXR"
      >
        <label
          className="sc-fznyAO ftBpOP"
          htmlFor="isSingleSelect"
        >
          Make it Single Choice
        </label>
        <span
          className="sc-fzqBZW ercQYo"
        >
          This Tag Category is currently Multi Choice
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`TagCategoryForm: Component should render empty 1`] = `
Array [
  <div
    className="sc-AxjAm bPMEtn"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="name"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Name
      </label>
      <input
        id="name"
        name="name"
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value=""
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <div
          className="sc-AxirZ wBsWx"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>,
  <label
    style={
      Object {
        "border": "none",
        "borderTop": "2px solid #2F2F36",
        "color": "#71737e",
        "display": "block",
        "fontSize": "14px",
        "outline": "none",
        "paddingTop": "8px",
        "width": "100%",
      }
    }
  >
    Applicable in
  </label>,
  <div
    style={
      Object {
        "border": "none",
        "borderTop": "1px solid #2F2F36",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "borderBottom": "none",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row-reverse",
          "height": 48,
          "justifyContent": "flex-end",
        }
      }
    >
      <input
        aria-hidden={true}
        checked={false}
        id="content"
        name="type"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        type="checkbox"
        value="content"
      />
      <span
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        <label
          className="sc-fzoLsD enjVMW"
          htmlFor="content"
        >
          Content
        </label>
      </span>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "fontSize": 0,
          }
        }
      >
        <label
          htmlFor="content"
          style={
            Object {
              "cursor": "pointer",
              "marginRight": 10,
            }
          }
        >
          <svg
            style={
              Object {
                "height": "30px",
                "stroke": "#FFF",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M7.5 7.5h15v15h-15z"
              fill="none"
            />
          </svg>
        </label>
      </div>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "borderBottom": "none",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row-reverse",
          "height": 48,
          "justifyContent": "flex-end",
        }
      }
    >
      <input
        aria-hidden={true}
        checked={false}
        id="dataset"
        name="type"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        type="checkbox"
        value="dataset"
      />
      <span
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        <label
          htmlFor="dataset"
        >
          Dataset
        </label>
      </span>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "fontSize": 0,
          }
        }
      >
        <label
          htmlFor="dataset"
          style={
            Object {
              "cursor": "pointer",
              "marginRight": 10,
            }
          }
        >
          <svg
            style={
              Object {
                "height": "30px",
                "stroke": "#FFF",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M7.5 7.5h15v15h-15z"
              fill="none"
            />
          </svg>
        </label>
      </div>
    </div>
  </div>,
  <div
    className="sc-fzoiQi cCgTZV"
  >
    <div
      className="sc-fzqARJ cFaRpH"
    />
    0 Tags
    <div
      className="sc-fzqARJ cFaRpH"
    >
      <div
        className="sc-fzoXzr kozlLJ"
      >
        <div
          className="sc-fznxKY oVAET"
        >
          <button
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": 40,
                "margin": "0",
                "minHeight": 40,
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": 40,
              }
            }
            type="button"
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": 40,
                  "minHeight": 40,
                  "shapeRendering": "crispEdges",
                  "width": 40,
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-AxgMl WJDfg"
  />,
  <div
    className="sc-AxmLO dpNtS"
    onClick={[Function]}
  >
    Tap or click to add new Tag
  </div>,
  <div
    className="sc-fzozJi eLMJeI"
  >
    <div
      className="sc-fzplWN dXUwnt"
    >
      <div>
        <input
          id="isAvailable"
          onChange={[Function]}
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
            }
          }
          type="checkbox"
        />
        <label
          htmlFor="isAvailable"
        >
          <div
            style={
              Object {
                "background": "#2F2F36",
                "borderRadius": 20,
                "boxSizing": "border-box",
                "cursor": "pointer",
                "height": 24,
                "padding": 2,
                "transition": "background 200ms ease-in-out",
                "width": 44,
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#FFF",
                  "borderRadius": "50%",
                  "height": 20,
                  "transform": "translateX(0)",
                  "transition": "transform 200ms ease-in-out",
                  "width": 20,
                }
              }
            />
          </div>
        </label>
      </div>
      <div
        className="sc-fznKkj hDJiXR"
      >
        <label
          className="sc-fznyAO ftBpOP"
          htmlFor="isAvailable"
        >
          Make it Available
        </label>
        <span
          className="sc-fzqBZW ercQYo"
        >
          This Tag Category is currently unavailable for Editors
        </span>
      </div>
    </div>
    <div
      className="sc-fzplWN dXUwnt"
    >
      <div>
        <input
          id="isSingleSelect"
          onChange={[Function]}
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
            }
          }
          type="checkbox"
        />
        <label
          htmlFor="isSingleSelect"
        >
          <div
            style={
              Object {
                "background": "#2F2F36",
                "borderRadius": 20,
                "boxSizing": "border-box",
                "cursor": "pointer",
                "height": 24,
                "padding": 2,
                "transition": "background 200ms ease-in-out",
                "width": 44,
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#FFF",
                  "borderRadius": "50%",
                  "height": 20,
                  "transform": "translateX(0)",
                  "transition": "transform 200ms ease-in-out",
                  "width": 20,
                }
              }
            />
          </div>
        </label>
      </div>
      <div
        className="sc-fznKkj hDJiXR"
      >
        <label
          className="sc-fznyAO ftBpOP"
          htmlFor="isSingleSelect"
        >
          Make it Single Choice
        </label>
        <span
          className="sc-fzqBZW ercQYo"
        >
          This Tag Category is currently Multi Choice
        </span>
      </div>
    </div>
  </div>,
]
`;
